# ppay_app/app/models/payment_receipt.rb
@@ -4,8 +4,8 @@ class PaymentReceipt < ApplicationRecord
   belongs_to :payment
   has_one_attached :image
 
-  validates :receipt_reason, presence: true
   validates :image, presence: true
+  validates :arbitration_source, presence: true
 
   enum receipt_reason: {
     duplicate_payment: 0,
@@ -15,6 +15,11 @@ class PaymentReceipt < ApplicationRecord
     time_expired: 4,
     check_by_check: 5,
     incorrect_amount_check_by_check: 6
+  }, _prefix: true
+  enum arbitration_source: {
+    merchant_dashboard: 0,
+    hpp_form: 1,
+    merchant_service: 2
   }, _prefix: true
 
   after_create_commit :set_arbitration_reason_from_receipt
