# ppay_app/app/serializers/api/v1/external_processing/payments/payment_receipts/create/payment_receipt_serializer.rb
@@ -1,0 +1,19 @@
+# frozen_string_literal: true
+
+module Api
+  module V1
+    module ExternalProcessing
+      module Payments
+        module PaymentReceipts
+          module Create
+            class PaymentReceiptSerializer
+              include JSONAPI::Serializer
+
+              attributes :image_url, :comment, :receipt_reason, :start_arbitration, :arbitration_source
+            end
+          end
+        end
+      end
+    end
+  end
+end
